# play-ubuntu-18.04-plan

./: README.md
concept/awesome-wm/: README.md
concept/awk/: README.md
concept/environment/: README.md  example-command.md  locale.md
concept/feh/: README.md  slideshow.md  wallpaper.md
concept/ffmpeg/: README.md
concept/graphicsmagick/: README.md
concept/gtk-bookmarks/: README.md
concept/imagemagick/: README.md
concept/openshot/: README.md  howto-explore.md  mime-osp.md  package.md
concept/toggle-show-desktop/example/libwnck/c/toggle-show-desktop/: Makefile  README.md  keybind.conf  main.c  meson.build
concept/update-prefix/: README.md
concept/xephyr/: README.md  install.sh
docs/howto/: start.md
docs/spec/: Keybind.md  Mousebind.md  Theme.md  Workspace.md  keybind.md  keyboard-shortcuts.md  mousebind.md
project/portable-firefox/: .gitignore  README.md  pf-ctrl
prototype/font-apt/: README.md
prototype/lxqt-theme/: README.md
prototype/metapackage/: README.md  metapackages.md  metapackages.txt
prototype/platform/: README.md
prototype/provides/: README.md
tool/: README.md
tool/broot/: README.md
tool/dzen2/: README.md
tool/fcitx/: Makefile  README.md  config-install.sh  package-list.txt  spec-keybind-chewing.md  spec-keybind.md  sync.sh
tool/fff/: README.md
tool/fzf/: README.md
tool/lemonbar/: README.md
tool/lf/: README.md
tool/ranger/: README.md
tool/rofi/: README.md
tool/urxvt/: README.md
tool/w3m/: w3m-img.md
tool/xfce4-terminal/: Makefile  package-list.txt
tool/xterm/: README.md
(+1077 files in other folders)
